# minimum-coresets

./: .gitignore  CMakeLists.txt  README.md  run-ANN-2.sh  run-ANN-3.sh  run-ANN.sh  run-ANN_HS.sh  run-Approx-2.sh  run-Approx.sh  run-Climate.sh  run-Color.sh  run-Coreset.sh  run-DG.sh  run-GRMR.sh  run-RMS_2d.sh  run-RMS_hd.sh  run-coreset-md.sh  run-examples.sh  run-uniform-2d.sh
ANN/: MVE.h  RMSUtils.cpp  RMSUtils3.cpp  RandUtil.cpp
ANN/coreset_r/: Makefile  coreset_r.cpp
ANN/include/ANN/: ANN.h
approx_md/: runApprox2.cpp  runApproxFixedSize.cpp  runApproxMD.cpp
approximate/: runApprox.cpp  runApprox2.cpp  runApproxFixedSize.cpp
baseline_ANN/: ANN.cpp  HittingSet.h  Make-config
baseline_ANN/coreset/: Makefile
baselines_ANN/: ANN.h  IOUtil.cpp  IOUtil.h  MVE.cpp  Makefile  Point.cpp  Point.h  RMSUtils.h  RandUtil.h  cholesky.h
baselines_ANN/coreset/: coreset.cpp
baselines_ANN/hs/: Makefile  hs.cpp
exact_grmr/: ExactGRMR.cpp  ExactGRMR.h  runExactGRMR.cpp  runExactGRMRLoss.cpp  runExample2D.cpp
examples/: example.txt  example_ex.txt  test_2d.txt  test_2d_dg.txt  test_2d_extremes.txt  test_3d.txt  test_3d_dg.txt  test_3d_extremes.txt  test_3d_ipdg.txt
graph/: DelaunayGraph.hpp  Digraph.hpp  DominanceGraph.hpp
heur_md/: HeurCoreset.cpp  HeurCoreset.h  runExampleMD.cpp  runHeur.cpp  runHeurFixedSize.cpp  runHeurMD.cpp  runHeurMDLoss.cpp
heuristic/: HeurCoreset.cpp  runExampleMD.cpp  runHeur.cpp
heuristic_grmr/: HeuristicGRMR.cpp  HeuristicGRMR.h  runDualGRMR.cpp  runExampleHD.cpp  runGRMR.cpp  runGRMRLoss.cpp
module_path/: FindGLPK.cmake
opt_2d/: OptimalCoreset.cpp  OptimalCoreset.h  runExample2D.cpp  runOpt.cpp  runOpt2D.cpp  runOpt2DFixSize.cpp  runOpt2DLoss.cpp  runOptFixSize.cpp
optimal/: OptimalCoreset.h  runOpt.cpp
utils/: IOUtil.hpp  Point.hpp  Point2D.hpp  SetCover.hpp  Validation.hpp
